<resources>
    <string name="app_name">My Application</string>
    <string name="Login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name*</string>
    <string name="Email">Email*</string>
    <string name="Password">Password*</string>
    <string name="phone">Phone*</string>

    <string name="Create_a_new_account">Create a new account</string>
    <string name="sign_up_to_continue">Sign up to continue</string>
    <string name="Dont_have_an_account">Dont have an account ?</string>

    <string name="Type_your_password">&#160; Type your password</string>
    <string name="Type_your_mail_adress">&#160; Type your mail address</string>
    <string name="enter_your_full_name">&#160; Enter your full name</string>
    <string name="enter_your_email_adresse">&#160; Enter your email adresse</string>
    <string name="enter_your_password">&#160; Enter your password</string>
    <string name="enter_your_phone_number">&#160; Enter your phone number</string>
    <string name="personnal_account">Personnal Account</string>
    <string name="proffesional_account">Proffesional Account</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string-array name="business_types">
        <item>Doctor</item>
        <item>Barber</item>
        <item>Trainer</item>
        <item>Mechanic</item>
        <item>Electrician</item>
        <item>Plumber</item>
        <item>Carpenter</item>
        <item>Architect</item>
        <item>Lawyer</item>
        <item>Accountant</item>
        <item>Teacher</item>
        <item>Designer</item>
        <item>Photographer</item>
        <item>Chef</item>
        <item>Baker</item>
        <item>Florist</item>
        <item>Consultant</item>
        <item>Real Estate Agent</item>
        <item>Marketing Specialist</item>
        <item>Software Developer</item>
        <item>Web Developer</item>
        <item>Mobile App Developer</item>
        <item>Veterinarian</item>
        <item>Fitness Coach</item>
        <item>Nutritionist</item>
        <item>Psychologist</item>
        <item>Therapist</item>
        <item>Massage Therapist</item>
        <item>Artist</item>
        <item>Musician</item>
        <item>Writer</item>
        <item>Editor</item>
        <item>Translator</item>
        <item>Taxi Driver</item>
        <item>Delivery Driver</item>
        <item>Barista</item>
        <item>Retail Manager</item>
        <item>Customer Service</item>
        <item>Security Guard</item>
        <item>Cleaner</item>
        <item>Event Planner</item>
        <item>Hairdresser</item>
        <item>Cosmetologist</item>
        <item>Fashion Designer</item>
        <item>Engineer</item>
        <item>Scientist</item>
        <item>Journalist</item>
        <item>Social Worker</item>
        <item>Entrepreneur</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>


</resources>