<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign_Up_Proffesional">

    <!-- ScrollView  -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- LinearLayout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title section -->
            <TextView
                android:id="@+id/textView_signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/font1"
                android:text="@string/sign_up"
                android:textColor="#000000"
                android:textSize="50sp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/font1"
                android:text="@string/sign_up_to_continue"
                android:textColor="#000000"
                android:textSize="25sp"
                android:layout_gravity="center_horizontal"/>

            <!-- Name Field -->
            <TextView
                android:id="@+id/textView_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/name"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/editText_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittext_border_background"
                android:drawableStart="@drawable/pencil_icon"
                android:ems="10"
                android:hint="@string/enter_your_full_name"
                android:inputType="text"
                android:padding="16dp"/>

            <!-- Email Field -->
            <TextView
                android:id="@+id/textView_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/Email"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/editTextTextEmailAddress2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittext_border_background"
                android:drawableStart="@drawable/mail_icon"
                android:ems="10"
                android:hint="@string/enter_your_email_adresse"
                android:inputType="textEmailAddress"
                android:padding="16dp"/>

            <!-- Password Field -->
            <TextView
                android:id="@+id/textView_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/Password"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/editTextTextPassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittext_border_background"
                android:drawableStart="@drawable/key_icon"
                android:ems="10"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:padding="16dp"/>

            <!-- Phone Field -->
            <TextView
                android:id="@+id/textView_Phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/phone"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/editText_Phone_Number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittext_border_background"
                android:drawableStart="@drawable/phone_icon"
                android:ems="10"
                android:hint="@string/enter_your_phone_number"
                android:inputType="number"
                android:padding="16dp"/>

            <!-- google maps field -->
            <TextView
                android:id="@+id/textView_Gps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/phone"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/editText_Gps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittext_border_background"
                android:drawableStart="@drawable/phone_icon"
                android:ems="10"
                android:hint="enter your location"
                android:inputType="number"
                android:padding="16dp"/>

            <!-- Sign Up Button -->
            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/button_background"
                android:text="@string/sign_up"
                android:textColor="#FFFFFF"
                android:textSize="20sp"/>

            <!-- Return to Log in text button -->
            <TextView
                android:id="@+id/textView_alreadyHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif"
                android:text="Already have an account?"
                android:textColor="#1E88E5"
                android:textSize="16sp"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
