<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical"
    android:fadeScrollbars="false"
    android:scrollbarThumbVertical="@drawable/scrollbar_thumb_gray"
    android:scrollbarSize="6dp"
    tools:context=".SignUp_Proffesional_Fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Title -->
        <TextView
            android:id="@+id/textView_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/font1"
            android:text="@string/sign_up"
            android:textColor="#000000"
            android:textSize="50sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/font1"
            android:text="@string/sign_up_to_continue"
            android:textColor="#000000"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@id/textView_signUp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Name -->
        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/name"
            app:layout_constraintTop_toBottomOf="@id/textView4"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editText_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_border_background"
            android:drawableStart="@drawable/pencil_icon"
            android:hint="@string/enter_your_full_name"
            android:inputType="text"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/textView6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Email -->
        <TextView
            android:id="@+id/textView_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:text="@string/Email"
            app:layout_constraintTop_toBottomOf="@id/editText_name"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextTextEmailAddress2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edittext_border_background"
            android:drawableStart="@drawable/mail_icon"
            android:hint="@string/enter_your_email_adresse"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/textView_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Password -->
        <TextView
            android:id="@+id/textView_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:text="@string/Password"
            app:layout_constraintTop_toBottomOf="@id/editTextTextEmailAddress2"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edittext_border_background"
            android:drawableStart="@drawable/key_icon"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/textView_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Phone -->
        <TextView
            android:id="@+id/textView_Phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:text="@string/phone"
            app:layout_constraintTop_toBottomOf="@id/editTextTextPassword2"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editText_Phone_Number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edittext_border_background"
            android:drawableStart="@drawable/phone_icon"
            android:hint="@string/enter_your_phone_number"
            android:inputType="number"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/textView_Phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Business Name -->
        <TextView
            android:id="@+id/textView_businessName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Business Name"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            app:layout_constraintTop_toBottomOf="@id/editText_Phone_Number"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editText_businessName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="Enter your business name"
            android:background="@drawable/edittext_border_background"
            android:padding="16dp"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/textView_businessName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Business Type -->
        <TextView
            android:id="@+id/textView_profession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Business Type"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            app:layout_constraintTop_toBottomOf="@id/editText_businessName"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_profession"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="Select or type your profession"
            app:layout_constraintTop_toBottomOf="@id/textView_profession"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <AutoCompleteTextView
                android:id="@+id/autoComplete_profession"
                android:minHeight="48dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Experience -->
        <TextView
            android:id="@+id/textView_experience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Years of Experience"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout_profession"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editText_experience"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="Enter years of experience"
            android:inputType="number"
            android:padding="16dp"
            android:background="@drawable/edittext_border_background"
            app:layout_constraintTop_toBottomOf="@id/textView_experience"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Location -->
        <TextView
            android:id="@+id/textView_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Business Location"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            app:layout_constraintTop_toBottomOf="@id/editText_experience"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editText_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="Enter your business location"
            android:padding="16dp"
            android:background="@drawable/edittext_border_background"
            app:layout_constraintTop_toBottomOf="@id/textView_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Sign-Up Button -->
        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/button_background"
            android:text="@string/sign_up"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/editText_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Already have account -->
        <TextView
            android:id="@+id/textView_alreadyHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="12dp"
            android:clickable="true"
            android:focusable="true"
            android:text="Already have an account?"
            android:textColor="#1E88E5"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/button4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
